--- a/Assigments/[Week 1] Three simple tables/tables.html
+++ b/Assigments/[Week 1] Three simple tables/tables.html
@@ -1,4 +1,5 @@
-<table border="1" width="50">
+<P>SOME THINGS ABOUT ME:  </P> 
+<table border="1" width="120">
     <tr>
       <th>Favourite dog breed</th>
       <th>Zodiac sign</th>
@@ -11,7 +12,7 @@
     </tr>
 </table>
 
-  
+
 <table border="2" width="50">
     <tr>
       <th>Favourite Movie</th>
@@ -25,8 +26,9 @@
     </tr>
 </table>
     
-    
-<table border="3" width="50">
+
+<P2>ABOUT APPLE COMPANY</P2>  
+<table border="3" width="70">
     <tr>
       <th>Company</th>
       <th>Contact</th>
