--- a/Assigments/[Week 1] Nesting Puzzle/link.Html
+++ b/Assigments/[Week 1] Nesting Puzzle/link.Html
@@ -3,6 +3,6 @@
     <head>
     </head>
     <body>
-        <a href="https://www.youtube.com/watch?v=-JIvA69zZ_4">YouTube<a/>
+        <a href="https://www.youtube.com/watch?v=-JIvA69zZ_4"><strong><em>YouTube</em></strong></a>
     </body>
 </html>
