--- a/Assigments/[Week 1] Sign Up and Log In Forms/log in.html
+++ b/Assigments/[Week 1] Sign Up and Log In Forms/log in.html
@@ -17,6 +17,6 @@
         <input type="submit" value="Log In"><br><br>
     </form>
 
-    <p>Don't have an account? <a href="register.html">Create one here</a></p>
+    <p>Don't have an account? <a href="file:///C:/Users/HP-650%20G1/Documents/FMA/Future-Mind-Academy/Assigments/[Week%201]%20Sign%20Up%20and%20Log%20In%20Forms/register.html">Create one here</a></p>
 </body>
 </html>
