--- a/Assigments/[Week 1] Sign Up and Log In Forms/sign up.html
+++ b/Assigments/[Week 1] Sign Up and Log In Forms/sign up.html
@@ -1,4 +1,8 @@
 <!DOCTYPE html>
+
+
+
+
 <html >
 <head>
     <meta charset="UTF-8">
@@ -42,6 +46,6 @@
         <input type="submit" value="Sign Up"><br><br>
     </form>
 
-    <p>Already have an account? <a href="login.html">Log in here</a></p>
+    <p>Already have an account? <a href="file:///C:/Users/HP-650%20G1/Documents/FMA/Future-Mind-Academy/Assigments/[Week%201]%20Sign%20Up%20and%20Log%20In%20Forms/log%20in.html">Log in here</a></p>
 </body>
 </html>
