sign up log in forms

--- a/Assigments/[Week 1] Sign Up and Log In Forms/signup.html
+++ b/Assigments/[Week 1] Sign Up and Log In Forms/signup.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <h1>Register</h1>
-    <form action="register_process.php" method="POST">
+    <form>
         <label for="name">First Name:</label>
         <input type="text" id="name" name="name" required><br><br>
 
@@ -46,6 +46,6 @@
         <input type="submit" value="Sign Up"><br><br>
     </form>
 
-    <p>Already have an account? <a href="file:///C:/Users/HP-650%20G1/Documents/FMA/Future-Mind-Academy/Assigments/[Week%201]%20Sign%20Up%20and%20Log%20In%20Forms/log%20in.html">Log in here</a></p>
+    <p>Already have an account? <a href="login.html">Log in here</a></p>
 </body>
 </html>
