--- a/Assigments/[Week 1] Sign Up and Log In Forms/login.html
+++ b/Assigments/[Week 1] Sign Up and Log In Forms/login.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Login</h1>
-    <form action="login_process.php" method="POST">
+    <form>
         <label for="email">Email:</label>
         <input type="email" id="email" name="email" required><br><br>
 
@@ -17,6 +17,6 @@
         <input type="submit" value="Log In"><br><br>
     </form>
 
-    <p>Don't have an account? <a href="file:///C:/Users/HP-650%20G1/Documents/FMA/Future-Mind-Academy/Assigments/[Week%201]%20Sign%20Up%20and%20Log%20In%20Forms/register.html">Create one here</a></p>
+    <p>Don't have an account? <a href="signup.html">Create one here</a></p>
 </body>
 </html>
