--- a/Assigments/[WEEK 2] FAVORITE CELEBRITY/celebrity.html
+++ b/Assigments/[WEEK 2] FAVORITE CELEBRITY/celebrity.html
@@ -61,18 +61,13 @@
 
         <p>zendaya's euphoria music video clip</p>
         <!-- MP4, WebM, and Ogg -->
-        <video contols autoplay contols muted loop src="/[WEEK 2] FAVORITE CELEBRITY/video.audio/zendaya.MP4.mp4"
-            width="300">
+        <video  autoplay loop controls muted             width="300">
 
             <source src="/[WEEK 2] FAVORITE CELEBRITY/video.audio/zendaya.MP4.mp4">
 
             Your browser does not support the video element.
         </video>
-        <p>zandaya's music audio </p>
-        <audio controls>
-            <source src="/[WEEK 2] FAVORITE CELEBRITY/video.audio/zendaya.MP4.mp4" type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
+        
 
     </section>
 
