--- a/Assigments/[Week 2] My local business/LocalBusiness.html
+++ b/Assigments/[Week 2] My local business/LocalBusiness.html
@@ -47,29 +47,7 @@
             </address>
 
             <!-- Embedding Google Maps -->
-            <iframe width="600" height="450" frameborder="0" style="border:0" div></iframe></div> class="mapouter"><div
-                class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no"
-                    marginheight="0" marginwidth="0"
-                    src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=maroa gjilan&amp;t=h&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
-                    href="https://connectionsgame.org/">Connections Puzzle</a></div>
-            <style>
-                .mapouter {
-                    position: relative;
-                    text-align: right;
-                    width: 100%;
-                    height: 400px;
-                }
-
-                .gmap_canvas {
-                    overflow: hidden;
-                    background: none !important;
-                    width: 100%;
-                    height: 400px;
-                }
-
-                .gmap_iframe {
-                    height: 400px !important;
-                }
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2943.1057098605706!2d21.455440475917108!3d42.46804037118306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548d3b5754d395%3A0xaa5b19bbbeef3601!2sMAROA!5e0!3m2!1sen!2s!4v1695651297360!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </style>
             </div>
             </iframe>
