--- a/Assigments/[Week 2] My local business/LocalBusiness.html
+++ b/Assigments/[Week 2] My local business/LocalBusiness.html
@@ -15,12 +15,12 @@
     </header>
 
 
-
+<main>
     <section id="About us">
         <h2>About us</h2>
         <p>
-            Maroa Bar is nestled in the heart of our town. We take pride in serving the finest coffee, coctails , and
-            many food options to kickstart your day. Our warm and friendly atmosphere is perfect for catching up with
+            Maroa Bar is nestled in the heart of our town. We serve the BEST coffee, coctails , and
+            many food options to start your day. Our warm and friendly atmosphere is perfect for catching up with
             friends, dancing, or just enjoying the music and food.
         </p>
 
@@ -30,7 +30,7 @@
         <section id="Photo Gallery">
             <h2>Photo Gallery</h2>
             <img src="/[Week 2] My local business/images/maroa.jpg" alt=" Maroa" width="300">
-            <img src="/[Week 2] My local business/images/maroa 2.jpg" alt="maroa 2" width="300">
+            <img src="/[Week 2] My local business/images/maroa 2.jpg" alt="Maroa 2" width="300">
 
 
 
@@ -42,19 +42,19 @@
             <p>
             <p>Visit us at:</p>
             <address>
-                RRUGA MUHARREM IMRAHIMI III<br>
-                GJILAN, KOSOVO
+                RRUGA MUHARREM IBRAHIMI III 
+                GJILAN 60000
             </address>
 
-            <!-- Embedding Google Maps -->
+            
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2943.1057098605706!2d21.455440475917108!3d42.46804037118306!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x13548d3b5754d395%3A0xaa5b19bbbeef3601!2sMAROA!5e0!3m2!1sen!2s!4v1695651297360!5m2!1sen!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </style>
             </div>
             </iframe>
-
+        </main>
             <footer>
-                <p>Copyright © 2023 Maroa Fan Club</p>
+                <p>Copyright  2023 Maroa Fan Club</p>
             </footer>
 </body>
 
-</html>
+</html> 
