--- a/Assigments/[Week 2] My local business/LocalBusiness.html
+++ b/Assigments/[Week 2] My local business/LocalBusiness.html
@@ -53,7 +53,7 @@
             </iframe>
         </main>
             <footer>
-                <p>Copyright  2023 Maroa Fan Club</p>
+                <p>Copyright © 2023 Maroa Fan Club</p>
             </footer>
 </body>
 
