--- a/Assigments/[WEEK 3] HTML FINAL PROJECT/Home.html
+++ b/Assigments/[WEEK 3] HTML FINAL PROJECT/Home.html
@@ -65,7 +65,7 @@
             <article>
                 <li>PRIMARY SCHOOL</li>
                 <ul style="list-style-type: circle;">
-                    <li><strong>SHFMU "Rexhep Elmazi"</strong>(2015-still going)</li>
+                    <li><strong>SHFMU "Rexhep Elmazi"</strong>(2015-still going ...)</li>
                 </ul>
             </article>
             <hr>
