--- a/Assigments/[WEEK 3] HTML FINAL PROJECT/Home.html
+++ b/Assigments/[WEEK 3] HTML FINAL PROJECT/Home.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Personal Portofolio</title>
+    <title>Personal Portfolio</title>
 </head>
 
 <body>
     <header>
-        <h1>Personal Portofolio</h1>
+        <h1>Personal Portfolio</h1>
         <hr>
         <nav>
             <li><a href="projects.html">My Project &#x1F4BB; </a></li>
@@ -32,7 +32,7 @@
 
                 I am excited to share a bit about myself and my aspirations to become a front-end engineer.<br>
 
-                My name is Besa Aliu, and I am on a mission to bridge the gap between creativity and technology through
+                My name is <strong>Besa Aliu</strong>, and I am on a mission to bridge the gap between creativity and technology through
                 web
                 development. From a young age, I've been captivated by the power of the internet to connect people and
                 ideas, and I've always been drawn to the visual aspects of websites and applications.
