--- a/Assigments/[WEEK 3] HTML FINAL PROJECT/contact.html
+++ b/Assigments/[WEEK 3] HTML FINAL PROJECT/contact.html
@@ -33,13 +33,13 @@
 
     <section>
         <h1>Connect whith me</h1>
-        <a href="https://www.facebook.com/">
+        <a href="https://www.facebook.com/" target="_blank">
             <img src="pictures/facebook.png" width="100">
         </a>
-        <a href="https://www.instagram.com/">
+        <a href="https://www.instagram.com/" target="_blank">
             <img src="./pictures/instagram.png" width="100">
         </a>
-    <a href="https://www.snapchat.com/">
+    <a href="https://www.snapchat.com/" target="_blank">
         <img src="./pictures/snapchat.jpg" width="100">
     </a>
     </section>
