--- a/Projects/[WEEK 3] HTML FINAL PROJECT/home.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/home.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personal Portfolio</title>
+    <link rel="icon" type="image/x-icon" href="pictures/icon.png">
 </head>
 
 <body>
@@ -12,8 +13,10 @@
         <h1>Personal Portfolio</h1>
         <hr>
         <nav>
+           <ul>
             <li><a href="projects.html">My Project &#x1F4BB; </a></li>
-            <li><a href="contactme.html">Contact Me &#128153;</a></li>
+            <li><a href="contact.html">Contact Me &#128153;</a></li>
+        </ul>
         </nav>
     </header>
 
@@ -66,8 +69,13 @@
                 <li>PRIMARY SCHOOL</li>
                 <ul style="list-style-type: circle;">
                     <li><strong>SHFMU "Rexhep Elmazi"</strong>(2015-still going ...)</li>
-                </ul>
-            </article>
+                 </ul>
+                 
+                 <li>COURSES</li>
+                 <ul style="list-style-type: circle;">
+                 <li><strong>OXFORD"</strong>(2016-2022)</li>
+                 </ul>
+                </article>
             <hr>
         </section>
 
