--- a/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Projects</title>
+  <link rel="icon" type="image/x-icon" href="pictures/icon.png">
 </head>
 
 <body>
@@ -13,13 +14,15 @@
 
     <hr>
     <nav>
+      <ul>
       <li><a href="Home.html">Home &#x1f3e0;</a></li>
-      <li><a href="contactme.html">Contact Me &#128153;</a></li>
+      <li><a href="contact.html">Contact Me &#128153;</a></li>
+      </ul>
     </nav>
   </header>
 
   <hr>
-
+<main>
   <section id="P1">
 
     <h1>Project 1</h1>
@@ -55,7 +58,7 @@
   </section>
 
   <hr>
-
+</main>
   <footer>
     <p>ALL RIGHTS RESERVED BESA ALIU © </p>
   </footer>
