--- a/Projects/[WEEK 3] HTML FINAL PROJECT/contact.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/contact.html
@@ -15,7 +15,7 @@
         <hr>
         <nav>
             <ul>
-            <li><a href="Home.html">Home &#x1f3e0;</a></li>
+            <li><a href="home.html">Home &#x1f3e0;</a></li>
             <li><a href="projects.html">My Project &#128153;</a></li>
             </ul>
         </nav>
