--- a/Assigments/[WEEK 2] FAVORITE CELEBRITY/celebrity.html
+++ b/Assigments/[WEEK 2] FAVORITE CELEBRITY/celebrity.html
@@ -36,13 +36,13 @@
             drama Malcolm & Marie (2021), and the science fiction epic Dune (2021).
         </p>
         <p>Young and now Zendaya photo:</p>
-        <img src="/[WEEK 2] FAVORITE CELEBRITY/images/zandaya.webp" alt="Young and now Zendaya photo" width="200">
+        <img src="./images/zandaya.webp" alt="Young and now Zendaya photo" width="200">
         <p>
             Zendaya gained widespread recognition for hes roles in movies like "Euphoria," "Dune," and "K.C.
             Undercover." She has won multiple Academy Awards for her outstanding performances.
         </p>
         <audio controls>
-            <source src="/[WEEK 2] FAVORITE CELEBRITY/video.audio/Zendaya 74th Emmy Awards Winnerview.mp3"
+            <source src="./video.audio/Zendaya 74th Emmy Awards Winnerview.mp3"
                 type="audio/mpeg">
             Your browser does not support the audio element.
         </audio>
@@ -60,10 +60,10 @@
 
 
         <p>zendaya's euphoria music video clip</p>
-        <!-- MP4, WebM, and Ogg -->
-        <video  autoplay loop controls muted             width="300">
+        
+        <video autoplay loop controls muted    width="300">
 
-            <source src="/[WEEK 2] FAVORITE CELEBRITY/video.audio/zendaya.MP4.mp4">
+            <source src="./video.audio/zendaya.MP4.mp4">
 
             Your browser does not support the video element.
         </video>
@@ -76,7 +76,7 @@
         <p>
             Zendaya has received numerous awards and nominations throughout her career.
         </p>
-        <img src="/[WEEK 2] FAVORITE CELEBRITY/images/Zendaya-awards-wins_d.webp"
+        <img src="./video.audio/Zendaya 74th Emmy Awards Winnerview.mp3"
             alt="Zendaya bags Emmy award for her role in Euphoria" width="300">
     </section>
 
