--- a/Projects/[WEEK 3] HTML FINAL PROJECT/home.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/home.html
@@ -14,8 +14,8 @@
         <hr>
         <nav>
             <ul>
-                <li><a href="projects.html">My Project &#x1F4BB; </a></li>
-                <li><a href="contact.html">Contact Me &#128153;</a></li>
+                <li><a href="projects.html" target="_blank">My Project &#x1F4BB; </a></li>
+                <li><a href="contact.html" target="_blank">Contact Me &#128153;</a></li>
             </ul>
         </nav>
     </header>
