--- a/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
@@ -15,8 +15,8 @@
     <hr>
     <nav>
       <ul>
-        <li><a href="home.html">Home &#x1f3e0;</a></li>
-        <li><a href="contact.html">Contact Me &#128153;</a></li>
+        <li><a href="home.html" target="_blank">Home &#x1f3e0;</a></li>
+        <li><a href="contact.html" target="_blank">Contact Me &#128153;</a></li>
       </ul>
     </nav>
   </header>
