--- a/Assigments/[Week 1] Three images/pictures.html
+++ b/Assigments/[Week 1] Three images/pictures.html
@@ -11,6 +11,14 @@
 </p>
 </p2>
 </p3>
+<p>
+<br> 
+<img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg"  width="300px"/></p>
+<br>
+<p2>
+<img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg"  width="300px"/></p2>
+<br>
+<p3>
+<img src="https://images.pexels.com/photos/1108099/pexels-photo-1108099.jpeg"  width="300px"/></p3>
 </body>
 </html>
-<br></br>
