--- a/Assigments/[Week 1] Three simple tables/tables.html
+++ b/Assigments/[Week 1] Three simple tables/tables.html
@@ -1,4 +1,16 @@
-<P>SOME THINGS ABOUT ME:  </P> 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>tables</title>
+</head>
+<body>
+  
+
+
+
+<p>SOME THINGS ABOUT ME:  </p> 
 <table border="1" width="120">
     <tr>
       <th>Favourite dog breed</th>
@@ -27,7 +39,7 @@
 </table>
     
 
-<P2>ABOUT APPLE COMPANY</P2>  
+<p2>ABOUT APPLE COMPANY</p2>  
 <table border="3" width="70">
     <tr>
       <th>Company</th>
@@ -40,3 +52,5 @@
       <td>America</td>
     </tr>
   </table>
+</body>
+</html>
