--- a/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
@@ -24,41 +24,46 @@
   <hr>
   <main>
     <section id="P1">
-
-      <h1>Project 1</h1>
-      <figure>
-        <img src="pictures/Project one.jpg" width="500">
-        <figcaption>
-          This is my First Project i did in HTML
-        </figcaption>
-      </figure>
+      <article>
+        <h1>Project 1</h1>
+        <figure>
+          <img src="pictures/Project one.jpg" width="500" alt="project 1">
+          <figcaption>
+            This is my First Project i did in HTML
+          </figcaption>
+        </figure>
+        </aricle>
     </section>
 
     <hr>
 
     <section id="P2">
       <h1>Project 2</h1>
-      <figure>
-        <img src="pictures/Project two.jpg" width="500">
-        <figcaption>
-          This is my Second Project i did in HTML
-        </figcaption>
-      </figure>
+      <article>
+        <figure>
+          <img src="pictures/Project two.jpg" width="500" alt="project 2">
+          <figcaption>
+            This is my Second Project i did in HTML
+          </figcaption>
+        </figure>
+      </article>
     </section>
 
     <hr>
 
     <section id="P3">
       <h1>Project 3</h1>
-      <figure>
-        <img src="pictures/Project three.jpg" width="500">
-        <figcaption>This is my Third Project i did in HTML
-        </figcaption>
-      </figure>
+      <article>
+        <figure>
+          <img src="pictures/Project three.jpg" width="500" alt="project 3">
+          <figcaption>This is my Third Project i did in HTML</figcaption>
+        </figure>
+      </article>
     </section>
-
-    <hr>
   </main>
+  
+  <hr>
+
   <footer>
     <p>ALL RIGHTS RESERVED BESA ALIU © </p>
   </footer>
