--- a/Assigments/[WEEK 2] FAVORITE CELEBRITY/celebrity.html
+++ b/Assigments/[WEEK 2] FAVORITE CELEBRITY/celebrity.html
@@ -12,83 +12,94 @@
     <header>
         <h1>Zendaya Coleman</h1>
         <p>One of Hollywood's Most Iconic Actress</p>
+        <nav>
+            <ul>
+                <li><a href="#bio">Biography</a></li>
+                <li><a href="#movies">Filmography</a></li>
+                <li><a href="#awards">Awards</a></li>
+                <li><a href="#gallery">Photo Gallery</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <nav>
-        <ul>
-            <li><a href="#bio">Biography</a></li>
-            <li><a href="#movies">Filmography</a></li>
-            <li><a href="#awards">Awards</a></li>
-            <li><a href="#gallery">Photo Gallery</a></li>
-        </ul>
-    </nav>
+    <main>
+        <section id="bio">
+            <article>
+                <h2>Biography</h2>
+                <p>
+                    Born and raised in Oakland, California, Zendaya began her career as a child model and backup dancer.
+                    She
+                    made her television debut as Rocky Blue on the Disney Channel sitcom Shake It Up (2010–2013) and
+                    starred as
+                    the titular character in the channel's sitcom K.C. Undercover (2015–2018). Her feature film debut
+                    came in
+                    2017 with the superhero film Spider-Man: Homecoming, and she later starred in its sequels. Zendaya's
+                    role as
+                    Rue Bennett, a struggling drug-addicted teenager, in the HBO teen drama series Euphoria
+                    (2019–present) made
+                    her the youngest recipient of the Primetime Emmy Awards for Outstanding Lead Actress in a Drama
+                    Series,
+                    which she won twice. Her other film roles include the musical The Greatest Showman (2017), the
+                    romantic
+                    drama Malcolm & Marie (2021), and the science fiction epic Dune (2021).
+                </p>
+                <p>Young and now Zendaya photo:</p>
+                <img src="./images/zandaya.webp" alt="Young and now Zendaya photo" width="200">
+                <p>
+                    Zendaya gained widespread recognition for hes roles in movies like "Euphoria," "Dune," and "K.C.
+                    Undercover." She has won multiple Academy Awards for her outstanding performances.
+                </p>
+                <audio controls>
+                    <source src="./video.audio/Zendaya 74th Emmy Awards Winnerview.mp3" type="audio/mpeg">
+                    Your browser does not support the audio element.
+                </audio>
+                <p>Zendaya 74th Emmy Awards Winnerview</p>
+            </article>
+        </section>
 
-    <section id="bio">
-        <h2>Biography</h2>
-        <p>
-            Born and raised in Oakland, California, Zendaya began her career as a child model and backup dancer. She
-            made her television debut as Rocky Blue on the Disney Channel sitcom Shake It Up (2010–2013) and starred as
-            the titular character in the channel's sitcom K.C. Undercover (2015–2018). Her feature film debut came in
-            2017 with the superhero film Spider-Man: Homecoming, and she later starred in its sequels. Zendaya's role as
-            Rue Bennett, a struggling drug-addicted teenager, in the HBO teen drama series Euphoria (2019–present) made
-            her the youngest recipient of the Primetime Emmy Awards for Outstanding Lead Actress in a Drama Series,
-            which she won twice. Her other film roles include the musical The Greatest Showman (2017), the romantic
-            drama Malcolm & Marie (2021), and the science fiction epic Dune (2021).
-        </p>
-        <p>Young and now Zendaya photo:</p>
-        <img src="./images/zandaya.webp" alt="Young and now Zendaya photo" width="200">
-        <p>
-            Zendaya gained widespread recognition for hes roles in movies like "Euphoria," "Dune," and "K.C.
-            Undercover." She has won multiple Academy Awards for her outstanding performances.
-        </p>
-        <audio controls>
-            <source src="./video.audio/Zendaya 74th Emmy Awards Winnerview.mp3"
-                type="audio/mpeg">
-            Your browser does not support the audio element.
-        </audio>
-        <p>Zendaya 74th Emmy Awards Winnerview</p>
-    </section>
+        <section id="movies">
+            <h2>Filmography</h2>
+            <nav>
+                <ul>
+                    <li><a href="https://en.wikipedia.org/wiki/Euphoria_(American_TV_series)">Euphoria</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Spider-Man:_No_Way_Home">Spider-Man No Way Home</a></li>
+                    <li><a href="https://en.wikipedia.org/wiki/Dune_2021_film">Dune</a></li>
 
-    <section id="movies">
-        <h2>Filmography</h2>
-        <ul>
-            <li><a href="https://en.wikipedia.org/wiki/Euphoria_(American_TV_series)">Euphoria</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Spider-Man:_No_Way_Home">Spider-Man No Way Home</a></li>
-            <li><a href="https://en.wikipedia.org/wiki/Dune_2021_film">Dune</a></li>
-
-        </ul>
-
-
+                </ul>
+            </nav>
+        </section>
         <p>zendaya's euphoria music video clip</p>
-        
-        <video autoplay loop controls muted    width="300">
+
+        <video autoplay loop controls muted width="300">
 
             <source src="./video.audio/zendaya.MP4.mp4">
 
             Your browser does not support the video element.
         </video>
-        
 
-    </section>
 
-    <section id="awards">
-        <h2>Awards</h2>
-        <p>
-            Zendaya has received numerous awards and nominations throughout her career.
-        </p>
-        <img src="./video.audio/Zendaya 74th Emmy Awards Winnerview.mp3"
-            alt="Zendaya bags Emmy award for her role in Euphoria" width="300">
-    </section>
+        </section>
 
-    <section id="gallery">
-        <h2>Photo Gallery</h2>
-        <img src="images/Zendayas photo 1.jpg" alt="Zendaya Coleman Photo 3" width="300">
-        <img src="images/Zendayas photo 2.jpg" alt="Zendaya Coleman Photo 3" width="300">
-        <img src="images/Zendayas photo 3.jpg" alt="Zendaya Coleman Photo 3" width="300">
+        <section id="awards">
+            <h2>Awards</h2>
+            <p>
+                Zendaya has received numerous awards and nominations throughout her career.
+            </p>
+            <img src="./video.audio/Zendaya 74th Emmy Awards Winnerview.mp3"
+                alt="Zendaya bags Emmy award for her role in Euphoria" width="300">
+        </section>
 
-        <footer>
-            <p>Copyright © 2023 Zendaya Fan Club</p>
-        </footer>
+        <section id="gallery">
+            <h2>Photo Gallery</h2>
+            <img src="images/Zendayas photo 1.jpg" alt="Zendaya Coleman Photo 3" width="300">
+            <img src="images/Zendayas photo 2.jpg" alt="Zendaya Coleman Photo 3" width="300">
+            <img src="images/Zendayas photo 3.jpg" alt="Zendaya Coleman Photo 3" width="300">
+        </section>
+
+    </main>
+    <footer>
+        <p>Copyright © 2023 Zendaya Fan Club</p>
+    </footer>
 </body>
 
 </html>
