--- a/Assigments/A colorful page/colorful.html
+++ b/Assigments/A colorful page/colorful.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1>A Colorful Page</h1>
+        <h1 class="cool-gradient">A Colorful Page</h1>
         <nav>
             <ul>
                 <li><a href="projects.html" target="_blank">Home </a></li>
@@ -26,7 +26,7 @@
 
             <article>
 
-                <p>
+                <p class="cool-gradient">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est fuga delectus earum voluptate nesciunt
                     recusandae quas voluptatum magnam ipsa deserunt nemo ab saepe animi, quidem odit perspiciatis,
                     aliquam nihil tempore aperiam porro laboriosam. Eius sit nulla repudiandae illo nam esse iusto,
@@ -40,7 +40,7 @@
 
         <section>
             <article>
-                <p>
+                <p class="cool-gradient">
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit. Est fuga delectus earum voluptate nesciunt
                     recusandae quas voluptatum magnam ipsa deserunt nemo ab saepe animi, quidem odit perspiciatis,
                     aliquam nihil tempore aperiam porro laboriosam. Eius sit nulla repudiandae illo nam esse iusto,
