--- a/Assigments/Changing the font/fonts.html
+++ b/Assigments/Changing the font/fonts.html
@@ -10,12 +10,12 @@
 
 <body>
     <section class="GillSants">
-        <h1><strong> This is a title</strong></h1>
+        <h1> This is a title</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum porro soluta animi illum maiores tempore
             vitae dignissimos doloribus cumque qui.
         </p>
 
-        <h1><strong>This is a subtitle</strong></h1>
+        <h1>This is a subtitle</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita placeat incidunt aspernatur repudiandae
             eius dolorum ratione! Eveniet, porro obcaecati iure consectetur perspiciatis distinctio inventore, quidem
             minima architecto voluptatibus id eaque recusandae enim magnam earum quaerat quisquam! Modi hic placeat
@@ -28,7 +28,7 @@
 
     <hr>
     <section class="CourierNew">
-        <h1><strong>This is a title</strong></h1>
+        <h1>This is a title</h1>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur facere itaque sapiente? Quia cum
             consectetur et quisquam quae, ducimus ut.</p>
 
