--- a/Assigments/Changing the font/fonts.html
+++ b/Assigments/Changing the font/fonts.html
@@ -32,7 +32,7 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur facere itaque sapiente? Quia cum
             consectetur et quisquam quae, ducimus ut.</p>
 
-        <h1><strong>This is a subtitle</strong></h1>
+        <h1>This is a subtitle</h1>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ipsam praesentium voluptatibus dolorem voluptate
             maxime, quibusdam minima reprehenderit fugiat quo, aliquam expedita? Vitae, sit nihil assumenda pariatur, ea
             iure sapiente eaque, illo adipisci perferendis rerum veritatis quaerat repellendus excepturi temporibus non
