--- a/Assigments/Box-Model Demonstration/box.html
+++ b/Assigments/Box-Model Demonstration/box.html
@@ -1,11 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Box-Model Demonstration</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique soluta cupiditate deleniti placeat
+        exercitationem a sequi voluptate! Sapiente repudiandae corporis facere minima, id illo atque ea enim, quod eaque
+        eveniet.</p>
 </body>
+
 </html>
