styling personal portfolio

--- a/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
@@ -6,24 +6,25 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Projects</title>
   <link rel="icon" type="image/x-icon" href="pictures/icon.png">
+  <link rel="stylesheet" href="style2.css">
 </head>
 
 <body>
   <header>
     <h1>MY PROJECTS</h1>
 
-    <hr>
+  
     <nav>
       <ul>
-        <li><a href="home.html" target="_blank">Home &#x1f3e0;</a></li>
-        <li><a href="contact.html" target="_blank">Contact Me &#128153;</a></li>
-      </ul>
+        <li class="a-position"><a href="home.html">Home &#129415;</a></li>
+        <li><a href="contact.html">Contact &#128123;</a></li>
+    </ul>
     </nav>
   </header>
 
   <hr>
   <main>
-    <section id="P1">
+    <section id="P1" class="project1">
       <article>
         <h1>Project 1</h1>
         <figure>
@@ -31,6 +32,7 @@
           <figcaption>
             This is my First Project i did in HTML
           </figcaption>
+          <p class="p-style"><strong>This is my second </strong></p>
         </figure>
         </aricle>
     </section>
@@ -41,10 +43,13 @@
       <h1>Project 2</h1>
       <article>
         <figure>
+           <div class="polariod">
           <img src="pictures/Project two.jpg" width="500" alt="project 2">
-          <figcaption>
-            This is my Second Project i did in HTML
-          </figcaption>
+          <div class="container">
+            <p>This is my second project</p>
+            <p class="p-style"><strong>This is my second </strong></p>
+          </div>
+          </div>
         </figure>
       </article>
     </section>
@@ -57,6 +62,7 @@
         <figure>
           <img src="pictures/Project three.jpg" width="500" alt="project 3">
           <figcaption>This is my Third Project i did in HTML</figcaption>
+          <p class="p-style"><strong>This is my second </strong></p>
         </figure>
       </article>
     </section>
