--- a/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My Projects</title>
-  <link rel="icon" type="image/x-icon" href="pictures/icon.png">
+  <link rel="icon" type="image/x-icon" href="pictures/logo.jpg">
   <link rel="stylesheet" href="style2.css">
 </head>
 
@@ -39,7 +39,7 @@
 
     <hr>
 
-    <section id="P2">
+    <section id="P2" class="project2">
       <h1>Project 2</h1>
       <article>
         <figure>
@@ -56,7 +56,7 @@
 
     <hr>
 
-    <section id="P3">
+    <section id="P3" class="project3">
       <h1>Project 3</h1>
       <article>
         <figure>
