--- a/Projects/[WEEK 3] HTML FINAL PROJECT/contact.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/contact.html
@@ -5,45 +5,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Me</title>
-    <link rel="icon" type="image/x-icon" href="pictures/icon.png">
+    <link rel="icon" type="image/x-icon" href="pictures/logo.jpg">
+    <link rel="stylesheet" href="style3.css">
 </head>
 
 
 <body>
     <header>
         <h1>CONTACT ME</h1>
-        <hr>
+        
         <nav>
             <ul>
-                <li><a href="home.html" target="_blank">Home &#129415;</a></li>
-                <li><a href="projects.html" target="_blank">My Project &#129499; </a></li>
+                <li class="li"><a href="home.html" target="_blank" class="a">Home &#129415;</a></li>
+                <li class="li"><a href="projects.html" target="_blank" class="a">My Project &#129499; </a></li>
             </ul>
         </nav>
 
     </header>
     <main>
         <hr>
-        <section>
-            <form>
-                <h1>Send me a message</h1>
+        <section class="message">
+            <form class="form">
+                <h1 class="h1">Send me a message</h1>
 
                 <input type="text" id="email" name="fname" placeholder="email" />
                 <label for="bio" name="bio"></label>
                 <br>
-                <textarea placeholder="what do you want to say?"></textarea>
+                <textarea placeholder="what do you want to say?" &#129415;></textarea>
                 <br>
                 <button>Send a message</button>
+            </form>
         </section>
 
         <hr>
 
-        <section>
-            <h1>Connect whith me</h1>
-            <a href="https://www.facebook.com/" target="_blank"><img src="pictures/facebook.png" width="100"></a>
+        <section class="contact">
+            <h1 class="h2">connect     whith      me</h1>
+            <a href="https://www.facebook.com/" target="_blank"><img src="pictures/facebook-halloween.png" width="100"></a>
 
-            <a href="https://www.instagram.com/" target="_blank"> <img src="./pictures/instagram.png" width="100"></a>
+            <a href="https://www.instagram.com/" target="_blank"> <img src="./pictures/insta-halloween.jpg" width="100"></a>
 
-            <a href="https://www.snapchat.com/" target="_blank"> <img src="./pictures/snapchat.jpg" width="100"></a>
+            <a href="https://www.snapchat.com/" target="_blank"> <img src="./pictures/snap-halloween.jpg" width="100"></a>
         </section>
     </main>
 
