--- a/Projects/[WEEK 3] HTML FINAL PROJECT/home.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/home.html
@@ -15,8 +15,8 @@
         
         <nav>
             <ul style="list-style-type: none;">
-                <li class="a-position"><a href="projects.html">My Projects &#129499;</a></li>
-                <li><a href="contact.html">Contact &#128123;</a></li>
+                <li class="li"><a href="projects.html">My Projects &#129499;</a></li>
+                <li class="li"><a href="contact.html">Contact &#128123;</a></li>
             </ul>
         </nav>
     </header>
