--- a/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
@@ -13,12 +13,12 @@
   <header>
     <h1>MY PROJECTS</h1>
 
-  
+
     <nav>
       <ul>
         <li class="a-position"><a href="home.html">Home &#129415;</a></li>
         <li><a href="contact.html">Contact &#128123;</a></li>
-    </ul>
+      </ul>
     </nav>
   </header>
 
@@ -43,12 +43,12 @@
       <h1>Project 2</h1>
       <article>
         <figure>
-           <div class="polariod">
-          <img src="pictures/Project two.jpg" width="500" alt="project 2">
-          <div class="container">
-            <p>This is my second project</p>
-            <p class="p-style"><strong>This is my second </strong></p>
-          </div>
+          <div class="polariod">
+            <img src="pictures/Project two.jpg" width="500" alt="project 2">
+            <div class="container">
+              <p>This is my second project</p>
+              <p class="p-style"><strong>This is my second </strong></p>
+            </div>
           </div>
         </figure>
       </article>
@@ -57,7 +57,7 @@
     <hr>
 
     <section id="P3" class="project3">
-      <h1>Project 3</h1>
+      <h1 class="h1">Project 3</h1>
       <article>
         <figure>
           <img src="pictures/Project three.jpg" width="500" alt="project 3">
@@ -67,7 +67,7 @@
       </article>
     </section>
   </main>
-  
+
   <hr>
 
   <footer>
