--- a/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
+++ b/Projects/[WEEK 3] HTML FINAL PROJECT/projects.html
@@ -40,7 +40,7 @@
     <hr>
 
     <section id="P2" class="project2">
-      <h1>Project 2</h1>
+      <h1 class="h2">Project 2</h1>
       <article>
         <figure>
           <div class="polariod">
