--- a/Assigments/Flexbox/flexbox.html
+++ b/Assigments/Flexbox/flexbox.html
@@ -1,47 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>flexbox</title>
     <style>
-        body{
+        body {
             padding: 0;
             margin: 0;
         }
 
-        .flex-container{
+        .flex-container {
             background-color: rgb(169, 169, 169);
-            margin: 1em;
-            padding: 1em;
+            margin: 1rem;
+            padding: 1rem;
             border: 2px solid black;
             display: flex;
             flex-direction: row;
-            gap: 1em;
+            gap: 1rem;
         }
 
-        .flex-child{
+        .flex-child {
             background-color: purple;
             border-radius: 10px;
-            padding: 1em;
+            padding: 1rem;
             color: white;
         }
-
-
-
-
-
-
     </style>
 </head>
+
 <body>
-   <div class="flex-container">
-    <div class="flex-child">Hello There 1</div>
-    <div class="flex-child">Hello There 2</div>
-    <div class="flex-child">Hello There 3</div>
-    <div class="flex-child">Hello There 4</div>
-    <div class="flex-child">Hello There 5</div>
-    <div class="flex-child">Hello There 6</div>
-   </div> 
+    <div class="flex-container">
+        <div class="flex-child">Hello There 1</div>
+        <div class="flex-child">Hello There 2</div>
+        <div class="flex-child">Hello There 3</div>
+        <div class="flex-child">Hello There 4</div>
+        <div class="flex-child">Hello There 5</div>
+        <div class="flex-child">Hello There 6</div>
+    </div>
 </body>
+
 </html>
