--- a/Assigments/Rotating an image/rotating.html
+++ b/Assigments/Rotating an image/rotating.html
@@ -28,6 +28,7 @@
             rotate: 720deg;
             scale: 1.2;
             transform-origin: 50% 50%;
+            transform-origin: top left;
         }
     </style>
 </head>
