--- a/Assigments/Grid Blogposts/grid-blogspot.html
+++ b/Assigments/Grid Blogposts/grid-blogspot.html
@@ -27,7 +27,7 @@
             grid-column: 1 / 2;
             padding: 5rem;
             padding-top: 11rem;
-            text-align: right;
+            text-align: c;
             
         }
 
